# aa_labs

./: CMakeLists.txt  compile_commands.json
lab1/include/: sorting_algos.hpp
lab1/src/: main.cpp
lab2/include/: bfs_dfs_on_graph.hpp
lab3/include/: dijkstra_floyd_warshall.hpp
lab4/include/: prim_kruskal.hpp
shared/include/: shared.hpp
